syntax = "proto3";

package unicampus_school;

service SchoolService {
  rpc ListSchool (stream School) returns (stream School) {}
  rpc ListSchoolByQuery (Query) returns (stream School) {}
  rpc ListSchoolByCritera (Critera) returns (stream School) {}
  rpc ListSchoolByOffset (Offset) returns (stream School) {}
  rpc GetSchool (School) returns (School) {}
  rpc PutSchool (School) returns (School) {}
  rpc DeleteSchool (School) returns (School) {}
}

message School {
  string id = 1;
  string name = 2;
  string description = 3;
}

message Query {
  string query = 1;
}

message Critera {
  string sector = 1;
}

message Offset {
  uint64 first = 1;
  uint64 offset = 2;
}
